# tcpsh-py

./: LICENSE  README.md  pyproject.toml  requirements.txt
tcpsh/: __main__.py  config.py  console.py  executor.py  parser.py  ui.py
tcpsh/forward/: forwarder.py  manager.py  proxy.py
tcpsh/listener/: listener.py  manager.py
tcpsh/session/: manager.py  session.py  state.py
